# duoids

./: .gitattributes  .gitignore  .hlint.yaml  .vale.ini  LICENSE.BSD-3-Clause  LICENSE.commercial  README.md  algebraic-graph-duoids.nix  cabal.project  dependencies.dhall  duoids-hedgehog.nix  duoids.nix  flake.nix  garnix.yaml  lightning-talk.org  nix-ci.nix  project.dhall  transformer-duoids.nix
.config/: mustache.yaml
.config/project/: default.nix  hlint.nix
.github/: settings.yml
.github/workflows/: build.yml
algebraic-graph/: algebraic-graph-duoids.cabal  package.dhall
algebraic-graph/docs/: license-report.md
algebraic-graph/src/Algebra/Graph/Orphans/: Duoid.hs
algebraic-graph/tests/: laws.hs
algebraic-graphs/: LICENSE  algebraic-graph-duoids.cabal
algebraic-graphs/docs/: license-report.md
algebraic-graphs/src/Algebra/Graph/: Duoid.hs
algebraic-graphs/src/Algebra/Graph/Duoid/: Orphans.hs
algebraic-graphs/tests/: laws.hs
categories/: duoidal-categories.cabal
categories/src/Category/Duoidal/: Do.hs
categories/src/Control/Category/: Duoidal.hs
core/: CHANGELOG.md  LICENSE  README.lhs  README.md  Setup.hs  duoids.cabal  package.dhall
core/docs/: license-report.md
core/src/Control/: Duoidal.hs
core/src/Control/Duoidal/: Async.hs  Do.hs  Either.hs  Laws.hs
core/src/Data/: Duoid.hs
core/src/Data/Duoid/: Laws.hs
hedgehog/: CHANGELOG.md  duoids-hedgehog.cabal  package.dhall
hedgehog/docs/: license-report.md
hedgehog/src/Test/: Duoid.hs  Duoidal.hs
hedgehog/tests/: laws.hs
transformer/: LICENSE.Universal-FOSS-exception-1.0  README.lhs  package.dhall  transformer-duoids.cabal
transformer/docs/: license-report.md
transformer/src/Control/Duoidal/Trans/: Orphans.hs
transformers/: duoidal-transformers.cabal
transformers/docs/: license-report.md
transformers/src/Control/Duoidal/Trans/: Class.hs  Orphans.hs
