cabal-version: 3.0

name: duoids-hedgehog
version: 0.0.1.0
synopsis: Unifying parallel and sequential operations
description: Duoids relate a pair of monoids, where one can be seen as
            “parallel” and the other “sequential”.
author: Greg Pfeil <greg@technomadic.org>
maintainer: Greg Pfeil <greg@technomadic.org>
copyright: 2024 Greg Pfeil
homepage: https://github.com/sellout/duoids#readme
bug-reports: https://github.com/sellout/duoids/issues
category: Algebra, Error Handling, Testing
build-type: Custom
license: AGPL-3.0-only WITH Universal-FOSS-exception-1.0 OR LicenseRef-commercial
license-files:
  LICENSE
  LICENSE.AGPL-3.0-only
  LICENSE.Universal-FOSS-exception-1.0
  LICENSE.commercial
extra-doc-files:
  CHANGELOG.md
  README.md
  docs/*.md
tested-with:
  GHC == {
    9.6.1, 9.6.3,
    9.8.1, 9.8.4,
    9.10.1,
    9.12.1
  }

source-repository head
  type: git
  location: https://github.com/sellout/duoids

-- This mimics the GHC2024 extension
-- (https://ghc.gitlab.haskell.org/ghc/doc/users_guide/exts/control.html?highlight=doandifthenelse#extension-GHC2024),
-- but supporting compilers back to GHC 7.10. If the oldest supported compiler
-- is GHC 9.10, then this stanza can be removed and `import: GHC2024` can be
-- replaced by `default-language: GHC2024`. If the oldest supported compiler is
-- GHC 9.2, then this can be simplified by setting `default-language: GHC2021`
-- and only including the extensions added by GHC2024.
common GHC2024
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DisambiguateRecordFields
    DoAndIfThenElse
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MagicHash
    MonadComprehensions
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PolyKinds
    PostfixOperators
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeOperators
    UnicodeSyntax

flag noisy-deprecations
  description:
    Prior to GHC 9.10, the @DEPRECATED@ pragma can’t distinguish between terms
    and types. Consenquently, you can get spurious warnings when there’s a name
    collision and the name in the other namespace is deprecated. Or you can
    choose to not get those warnings, at the risk of not being warned when
    there’s a name collision and the namespace you’re referencing is the one
    that’s deprecated.
  default: True
  manual: False

common defaults
  import: GHC2024
  build-depends:
    base ^>= {4.18.0, 4.19.0, 4.20.0, 4.21.0},
  ghc-options:
    -Weverything
    -- This one just reports unfixable things, AFAICT.
    -Wno-all-missed-specialisations
    -- Type inference good.
    -Wno-missing-local-signatures
    -- Warns even when `Unsafe` is explicit, not inferred. See
    -- https://gitlab.haskell.org/ghc/ghc/-/issues/16689
    -Wno-unsafe
  if impl(ghc >= 9.8.1)
    ghc-options:
      -- Inference good.
      -Wno-missing-role-annotations
  default-extensions:
    BlockArguments
    DefaultSignatures
    ExplicitNamespaces
    FunctionalDependencies
    LexicalNegation
    LiberalTypeSynonyms
    PackageImports
    ParallelListComp
    QualifiedDo
    RecursiveDo
    -- RequiredTypeArguments - uncomment if the oldest supported version is GHC 9.10.1+
    StrictData
    TemplateHaskellQuotes
    TransformListComp
    NoGeneralizedNewtypeDeriving
    NoImplicitPrelude
    NoMonomorphismRestriction
    NoPatternGuards
    NoStarIsType
    NoTypeApplications
  if flag(noisy-deprecations)
    cpp-options: -DSELLOUT_NOISY_DEPRECATIONS

custom-setup
  setup-depends:
    -- TODO: Remove `Cabal` dep once haskell/cabal#3751 is fixed.
    Cabal >= 3.0.0,
    base ^>= {4.18.0, 4.19.0, 4.20.0, 4.21.0},
    cabal-doctest ^>= {1.0.0},

library
  import: defaults
  hs-source-dirs: src
  build-depends:
    duoids ^>= {0.0.1},
    hedgehog ^>= {1.2, 1.4, 1.5, 1.7},
  exposed-modules:
    Test.Duoid
    Test.Duoidal

test-suite laws
  import: defaults
  type: exitcode-stdio-1.0
  main-is: tests/laws.hs
  build-depends:
    duoids-hedgehog,
    hedgehog ^>= {1.2, 1.4, 1.5, 1.7},

test-suite doctests
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: doctests.hs
  build-depends:
    doctest ^>= {0.21.1, 0.22.6, 0.24.0},
    duoids-hedgehog,
  -- TODO: The sections below here are necessary because we don’t have control
  --       over the generated `Build_doctests.hs` file. So we have to silence
  --       all of its warnings one way or another.
  ghc-options:
    -- `doctest` requires the package containing the doctests as a dependency
    -- to ensure it gets built before this test-suite, even though the package
    -- appears to be unused.
    -Wno-unused-packages
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-safe
  default-extensions:
    -- Since we can’t add `{-# LANGUAGE Safe -#}` to the generated
    -- “Build_doctests.hs”, we set it here, and that means it has to match
    -- doctests.hs, which is `Unsafe`.
    Unsafe
